--- a/css/styles.css
+++ b/css/styles.css
@@ -1008,6 +1008,7 @@ address .link:not(:last-child) {
   /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
   border-radius: 4px;
   background-color: transparent;
+  color: var(--accent-color-2);
 }
 
 .subscription button {
